--- a/escrito/sty/thesis-package.sty
+++ b/escrito/sty/thesis-package.sty
@@ -204,6 +204,13 @@
 	long-indefinite = an,
 	short-format = \scshape
 }
+\DeclareAcronym{dp}{
+	short = dp,
+	long = Dynamic Programming,
+	short-indefinite = a,
+	long-indefinite = a,
+	short-format = \scshape
+}
 
 
 %=================================================%
