Geometry adjustments + bib names

--- a/escrito/BachelorsThesis.bib
+++ b/escrito/BachelorsThesis.bib
@@ -74,20 +74,19 @@
   doi = {10.1007/978-0-387-84858-7},
   urldate = {2022-09-01},
   isbn = {978-0-387-84857-0 978-0-387-84858-7},
-  keywords = {Averaging,Boosting,classification,clustering,data mining,machine learning,Projection pursuit,Random Forest,supervised learning,Support Vector Machine,unsupervised learning}
 }
 
 @thesis{farias2002thesis,
   type = {phdthesis},
   title = {The {{Linear Programming Approach}} to {{Approximate Dynamic Programming}}: {{Theory}} and {{Application}}},
-  author = {family=Pucci, suffix=Farias, prefix=De, given=Daniela, useprefix=true},
+  author = {family=Pucci, suffix=Farias, prefix=De, given=Daniela},
   date = {2002},
   institution = {{Stanford University}}
 }
 
 @article{farias2003LP2ADP,
   title = {The {{Linear Programming Approach}} to {{Approximate Dynamic Programming}}},
-  author = {family=Pucci, suffix=Farias, prefix=De, given=Daniela, useprefix=true and Van Roy, Benjamin},
+  author = {family=Pucci, suffix=Farias, prefix=De, given=Daniela and Van Roy, Benjamin},
   date = {2003},
   journaltitle = {Operations Research},
   volume = {51},
@@ -99,7 +98,7 @@
 
 @article{farias2004constraint,
   title = {On {{Constraint Sampling}} in the {{Linear Programming Approach}} to {{Approximate Dynamic Programming}}},
-  author = {family=Pucci, given=family=Farias, suffix=prefix=De, prefix=given=Daniela, useprefix=true and Van Roy, Benjamin},
+  author = {family=Pucci, suffix=Farias, prefix=De, given=Daniela and Van Roy, Benjamin},
   date = {2004},
   journaltitle = {Mathematics of Operations Research},
   volume = {29},
