--- a/escrito/FrontBackMatter/Abstract.tex
+++ b/escrito/FrontBackMatter/Abstract.tex
@@ -9,15 +9,15 @@ considerados hace unas décadas imposibles, ahora es posible resolver y son
 utilizados en nuestro día a día. Estos avances se han dado gracias a la sinergia
 entre las Matemáticas y las Ciencias de la Computación.
 
-Estas herramientas pasaron de ser problemas teóricos estudiados en la academia,
-a ser problemas de ingeniería que se resuelven a escala día tras día. Una gran
-parte de las personas involucradas en la implementación de estas soluciones
-tienen conocimiento limitado sobre los conceptos matemáticos que subyacen la
-práctica que llevan a cabo, lo cual es natural dado que no es conocimiento
-esencial para sus tareas cotidianas. Esta tesis es un esfuerzo por explorar la
-teoría y las intuiciones detrás de una de las técnicas más novedosas de la
-Inteligencia Artificial: Aprendizaje por Refuerzo (\textsc{rl} por sus siglas en
-inglés). Esta tesis busca sentar las bases en Procesos Estocásticos,
+Estas herramientas pasaron de ser problemas teóricos estudiados en la
+a\-ca\-de\-mi\-a, a ser problemas de ingeniería que se resuelven a escala día
+tras día. Una gran parte de las personas involucradas en la implementación de
+estas soluciones tienen conocimiento limitado sobre los conceptos matemáticos
+que subyacen la práctica que llevan a cabo, lo cual es natural dado que no es
+conocimiento esencial para sus tareas cotidianas. Esta tesis es un esfuerzo por
+explorar la teoría y las intuiciones detrás de una de las técnicas más novedosas
+de la Inteligencia Artificial: Aprendizaje por Refuerzo (\textsc{rl} por sus
+siglas en inglés). Esta tesis busca sentar las bases en Procesos Estocásticos,
 Probabilidad, y Optimización que dan el trasfondo para entender el aprendizaje
 por refuerzo. Se busca presentar el contenido de manera intuitiva sin dejar de
 lado el rigor matemático. Como matemático siento una obligación por presentar el
