--- a/escrito/pruebas.tex
+++ b/escrito/pruebas.tex
@@ -1,15 +1,16 @@
 \documentclass[colorful]{sty/itam-thesis}
 
 \usepackage[
-		% showframe,
+		showframe,
 		paperwidth=17cm,
 		paperheight=22.5cm,
-		nofoot=true,
+		% nofoot=true,
+		footskip = 2em,
 		bindingoffset=1.1cm,
-		inner=1.6cm,
-		outer=1.8cm,
-		top=2.5cm,
-		bottom=1.5cm
+		inner=1.5cm,
+		outer=1.3cm,
+		top=2cm,
+		bottom=2cm
 		%% Dimensiones para hoja suelta de derechos %%
 		% paperwidth = 8.5in,
 		% paperheight = 27.9cm,
