Commit final antes de impresión

--- a/escrito/FrontBackMatter/Abstract.tex
+++ b/escrito/FrontBackMatter/Abstract.tex
@@ -33,7 +33,9 @@ permite dar soluciones aproximadas a este problema explicando porqué son de
 interés. La tercera y última parte establece la conexión entre el aprendizaje de
 máquina supervisado y el aprendizaje por refuerzo, y propone un algoritmo basado
 en las soluciones aproximadas, que son el foco principal de esta tesis, al
-problema de ajuste de árboles de decisión.
+problema de ajuste de árboles de decisión. Finalmente se sientan las bases con
+ejemplos de código que podrían facilitar una futura implementación completa del
+algoritmo que se propone.
 
 \chapter*{Abstract}
 In the last 20 or so years, several advancements and novel
@@ -65,4 +67,6 @@ approximate solutions to the Reinforcement Learning Problem, motivating reasons
 why approximations are desireable. Lastly, the third part motivates the framing
 of an important problem in Supervised Machine Learning, the fitting of decision
 trees, as a Reinforcement Learning Problem and proposes an algorithm based on
-the approximate solutions developed earlier.
+the approximate solutions developed earlier. We conclude by implementing the
+elemental building blocks that would be needed to provide a complete
+implementation of the propose algorithm in the future.
