--- a/escrito/FrontBackMatter/Acknowledgments.tex
+++ b/escrito/FrontBackMatter/Acknowledgments.tex
@@ -1,30 +1,28 @@
 \addcontentsline{toc}{chapter}{Acknowledgements}
-
-\begin{flushright}{\slshape
-    We have seen that computer programming is an art, \\
-    because it applies accumulated knowledge to the world, \\
-    because it requires skill and ingenuity, and especially \\
-    because it produces objects of beauty.} \\ \medskip
-    % --- \defcitealias{knuth:1974}{Donald E. Knuth}\citetalias{knuth:1974} \citep{knuth:1974}
-\end{flushright}
-
-
-
-\bigskip
-
 {
     \chapter*{Acknowledgments}
-    Put your acknowledgments here.
 
-    To acknowledge:
-    \begin{itemize}
-        \item Gente
-        \item Open source projects
-    \end{itemize}
+    Esta colección de hojas, letras e ideas representa la mayor cantidad de
+    esfuerzo que he dedicado a una tarea específica en mi vida. Este trabajo y
+    el esfuerzo que representa los dedico a mi familia y a mis amigos que son mi
+    otra familia.
+
+    Para Panini, Sofi Spinola, Juanito, Lothar, Ana Galán, Tonantzin, Rebe y Yonatan por compartir sus años itamitas conmigo, por obligarme a hacer tarea, y
+    más de una vez preguntarse si ya había comido o tenía manera de llegar a
+    casa.
+    
+    Para mi familia, que nunca ha dejado de poner su fé en mi. Para Sarah,
+    Ankara, Max y Sandy por compartir la sobremesa conmigo.
+    
 
     \bigskip
 
-    Special thanks Arnaud Joly, core developer emeritus of the scikit-learn
-    library, for his assitance in implementing the \ac{cart} algorithm; and Prof.
-    Ashwin Rao from Stanford University for pointing me in the right direction.
+    Quiero agradecer a mi asesor Andreas Wachtel no solo por ser el buen asesor
+    que fue, sino por haber servido como guía en el descubrimiento de las
+    matemáticas que me apasionan a lo largo de mi carrera como estudiante en el
+    \textsc{itam}. También agradezco a Arnaud Joly, parte del equipo de
+    desarrollo principal de la librería scikit-learn por su guía sobre cómo
+    implementar el algoritmo de árboles de clasificación y regresión, y al
+    profesor Ashwin Rao de la universidad de Stanford por proveer sus notas del
+    curso y responder un par de preguntas.
 }
