--- a/escrito/FrontBackMatter/Dedication.tex
+++ b/escrito/FrontBackMatter/Dedication.tex
@@ -3,7 +3,8 @@
 \vspace*{3cm}
 
 \begin{center}
-    Por escribir
+    A mi mamá y a mi papá. \\
+    Porque mis logros son nuestros logros.
 \end{center}
 
 \medskip
