Imagenes a assets web

--- a/escrito/img/board.tex
+++ b/escrito/img/board.tex
@@ -46,7 +46,7 @@
         node distance=1.5cm,
         place/.style={
             draw, rectangle, minimum size=1.5cm, text width=1cm,
-            align=center
+            align=center, fill=white
         }
     ]
 
