--- a/escrito/img/transicion-markov.tex
+++ b/escrito/img/transicion-markov.tex
@@ -48,7 +48,7 @@
 		% show background rectangle,
 		node distance=1.75cm,
 		place/.style={
-			draw, circle, align=center, minimum size=0.75cm
+			draw, circle, align=center, minimum size=0.75cm, fill=white
 		}
 	]
 
