--- a/escrito/img/transicion.tex
+++ b/escrito/img/transicion.tex
@@ -45,7 +45,7 @@
     [
 		node distance=1.75cm,
         place/.style={
-			draw, circle, align=center, minimum size=0.75cm
+			draw, circle, align=center, minimum size=0.75cm, fill=white
 		}
     ]
 
