Toques definitivos a pdf impreso

--- a/escrito/FrontBackMatter/Abstract.tex
+++ b/escrito/FrontBackMatter/Abstract.tex
@@ -1,8 +1,6 @@
-\addcontentsline{toc}{chapter}{Abstract}
-
 \chapter*{Resumen}
 En las últimas décadas, avances en el campo conocido como Inteligencia
-Artificial nos han forzado a revaluar problemas que antres se creían
+Artificial nos han forzado a revaluar problemas que antes se creían
 prácticamente imposibles de resolver mediante el uso de computadoras. Problemas
 como procesamiento de lenguaje natural, reconocimiento de imágenes y otros,
 considerados hace unas décadas imposibles, ahora es posible resolver y son
@@ -37,7 +35,11 @@ problema de ajuste de árboles de decisión. Finalmente se sientan las bases con
 ejemplos de código que podrían facilitar una futura implementación completa del
 algoritmo que se propone.
 
+\cleardoublepage
+
+\addcontentsline{toc}{chapter}{Abstract}
 \chapter*{Abstract}
+
 In the last 20 or so years, several advancements and novel
 techniques have transformed the landscape of the discipline we currently call
 Artificial Intelligence. These new approaches have made possible tasks that were
@@ -70,3 +72,5 @@ trees, as a Reinforcement Learning Problem and proposes an algorithm based on
 the approximate solutions developed earlier. We conclude by implementing the
 elemental building blocks that would be needed to provide a complete
 implementation of the propose algorithm in the future.
+
+\cleardoublepage
