--- a/escrito/FrontBackMatter/Acknowledgments.tex
+++ b/escrito/FrontBackMatter/Acknowledgments.tex
@@ -26,3 +26,4 @@
     profesor Ashwin Rao de la universidad de Stanford por proveer sus notas del
     curso y responder un par de preguntas.
 }
+\cleardoublepage
