--- a/escrito/pruebas.tex
+++ b/escrito/pruebas.tex
@@ -4,7 +4,7 @@
 		% showframe,
 		paperwidth=17cm,
 		paperheight=22.5cm,
-		% nofoot=true,
+		nofoot=true,
 		footskip = 2em,
 		bindingoffset=1.1cm,
 		inner=1.5cm,
@@ -42,7 +42,7 @@
 % Paquete custom
 \usepackage{sty/thesis-package}
 
-\author{Alonso Martinez Cisneros}
+\author{Alonso Martínez Cisneros}
 \title{%
 	Soluciones aproximadas al problema de Aprendizaje por Refuerzo mediante
 	Programación lineal; con aplicaciones al Aprendizaje de Máquina Supervisado%
@@ -51,7 +51,7 @@
 	Approximate solutions to the Reinforcement Learning Problem via Linear
 	Programming; with applications to Supervised Machine Learning%
 }
-\date{2022}
+\date{2023}
 
 \begin{document}
 
@@ -76,7 +76,7 @@
 \include{FrontBackMatter/Abstract}
 
 {
-	% Don't color links only on the table of contents
+	% Don't color links, but only on the table of contents
 	\hypersetup{hidelinks}
 
 	\tableofcontents
